tests/invalid/Return_Invalid_3.whiley
import * from whiley.lang.*

function f(bool z) -> void:
    return z
